# tokenburn

./: Cargo.toml  LICENSE  README.md  release.sh
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: app.rs  calculator.rs  cli.rs  collect.rs  credentials.rs  formatting.rs  history.rs  main.rs  models.rs  usage_client.rs
src/display/: chart.rs  compact.rs  mod.rs  tui.rs
