[package]
name = "tokenburn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tokenburn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
